4月追加。会計について追加。

--- a/2021時系列.md
+++ b/2021時系列.md
@@ -6,6 +6,8 @@
 
 ## 12月 － 開発環境を心機一転
 
+目標: 2年生をチーム開発に滞りなく入れるように開発環境を整える。全ての情報を全員が簡単に把握できるようにしたかった。
+
 ### アプリ班全体
 
 * 開発環境を整える
@@ -44,6 +46,8 @@
 
 ## 1月 － ほぼなんもしてねえ
 
+目標: 特になし
+
 ### アプリ班全体
 
 * 各アプリ担当にまかせて教育を進めていた
@@ -64,7 +68,9 @@
 
 
 
-## 2月 － アプリの要件定義をスタート
+## 2月 － アプリの要件定義
+
+目標: とにかく必要/欲しい機能を洗い出す。
 
 ### アプリ班全体
 
@@ -90,6 +96,8 @@
 
 
 ## 3月 － UI をざっくり設計, 他の局から依頼が来る
+
+目標: 開発担当が肉付けしていけば出来るレベルまで UI を設計しておく。要するに開発に取り掛かれるくらいには組んでおく。
 
 ### アプリ班全体
 
@@ -147,3 +155,50 @@
     * 広報曰く、途中から返信がまったく来なくなったそうです。（これにより、結局まったく話が進まないまま終わりました）
     * 仮に話が進んだとして、きちんと対応していただけるかどうかわかりません。警戒は必須です。
 
+
+
+## 4月 － 教育 & 他局連携
+
+目標: そろそろ新入生が来るから各々教えられるように勉強&教材づくり
+
+### アプリ班全体
+
+* Android
+  * わからん
+* iOS 
+  * まず公式チュートリアルを進めてもらった。
+  * todoアプリのサンプルを小林が作成し、それをもとに MVVM と状態管理の解説を行った。
+  * ほんで、実践のためそれをトレースして作ってもらった。
+* Blender
+  * キットカット（ベベル, 押し出し）
+  * マイク
+  * サイコロの作成（ベベル, 法線に沿った押し出し, 差し込み, ループカット, 拡大選択, ポリゴンごとにマテリアルを適用する, サブディビジョン）
+  * 矢口くんの作成（ミラー, ブーリアン, ナイフ, ベベルの応用, 自動スムーズ, プラグイン - BoltFactory）
+* ウォークラリーとの話し合い
+  * NFC タグ使っても面白いよねって話をした。
+  * 一定数スタンプがたまったらアプリ内で抽選し、景品交換所に行く感じで行きたいということ。
+  * 景品の数が決まってるからサーバーにあらかじめ保存しておいて抽選されるものを決める形にしたいということ。
+  * アプリを消してリセットして景品を獲得しようとする人への対処はしなくていいってさ。
+    * 最終的には認識のズレがあった。理工展終了後「そんなこと言ったっけ？」ってなってた。
+  * デザインは背景画像とかだとレスポンスがしんどいからアプリ班でシンプルなの考えて、ちょっとした装飾系があれば提供してもらう形。
+    * 最終的には特に提供無し。まあ期限も決めてなかったし、もしあればって感じだったから来るのは期待してなかったが。
+
+* 麺爺
+  * 担当がいなくて話が進まない
+
+
+
+### チーフ
+
+* 広報物調査内容を決める会議に出席。
+  * 内容の把握と認識のズレの確認を行った。
+  * バーチャル担当も連れて行っておこう。バーチャル特有の欲しい情報などを確認しておくといい。
+* Swift の教材作成開始（確か全て完成したのは7月下旬のはず...基本文法は結局 Playground でやってもらったので使わなかった）
+  * 基本文法とオブジェクト指向について
+
+
+
+### 反省点・アドバイスなど
+
+* 教材作るなら早めに。新入生が来るタイミングで間に合わなかったら意味ないのでね。自分で作るより誰かが作ったものでいいのがあれば流用すべき。
+* 本を買ってもいいだろう。「プログラミング初心者向け」の Flutter 本があるかはわからんが。
